[gd_scene load_steps=2 format=3 uid="uid://csnfj11tetexq"]

[ext_resource type="Script" path="res://scripts/inventory/selection_button.gd" id="1_hr16x"]

[node name="SelectionButton" type="Control"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 3
anchors_preset = 0
offset_right = 75.0
offset_bottom = 75.0
pivot_offset = Vector2(37.5, 37.5)
script = ExtResource("1_hr16x")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(75, 75)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -37.5
offset_right = 37.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(37.5, 37.5)

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
